bynkc/tests/fixtures/negative/371_query_accessor_on_held_map/src/s.bynk
context s

type RoomId = opaque String
type UserId = opaque String
type ServerFrame = { text: String }

-- The key-aware query accessors (`.entries`/`.keys`/`.values`) are not offered
-- on a held `Map[K, Connection]` — a held resource is iterated with the
-- broadcast ops. `bynk.held.query_accessor_on_held_map`.
agent Room {
  key id: RoomId
  store conns: Map[UserId, Connection[ServerFrame]]

  on call names() -> Effect[List[UserId]] {
    conns.entries.map((e) => e.key).collect()
  }
}
